tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unconstrained_numeric_generic_in_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The type parameter `N` is not constrained by the impl trait, self type, or predicates
  ┌─ src/main.nr:4:18
  │
4 │         impl<let N: u32> Foo {}
  │                  - Hint: remove the `N` type parameter
  │

Aborting due to 1 previous error
